Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     "%matplotlib inline\n",
     "\n",
     "sns.set_style('darkgrid') #Pretty background including grid lines for our backdrop\n",
-    "plt.hist(sample_means, bins=250);"
+    "plt.hist(sample_means, bins=250);\n"
    ]
   },
   {
