--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -321,9 +321,7 @@
     "%matplotlib inline\n",
     "\n",
     "sns.set_style('darkgrid') #Pretty background including grid lines for our backdrop\n",
-    "plt.hist(sample_means, bins=250);\n",
-    "import scipy.stats as stats\n",
-    "stats.s"
+    "plt.hist(sample_means, bins=250);\n"
    ]
   },
   {
