Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
     "\n",
     "sns.set_style('darkgrid') #Pretty background including grid lines for our backdrop\n",
     "plt.hist(sample_means, bins=250);\n",
-    "import scipy.stats as stats\n",
+    "from scipy.stats import skew, kurtosis\n",
     "stats.s"
    ]
   },
