Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
     "sns.set_style('darkgrid') #Pretty background including grid lines for our backdrop\n",
     "plt.hist(sample_means, bins=250);\n",
     "from scipy.stats import skew, kurtosis\n",
-    "stats.s"
+    "skew()"
    ]
   },
   {
